fixed buttons not fitting in box

--- a/src/components/ClientList/ClientList.css
+++ b/src/components/ClientList/ClientList.css
@@ -4,7 +4,7 @@
     padding: 15px;
     margin: 10px;
     text-align: center;
-    height: 100px;
+    height:fit-content;
     width: 200px;
 }
 
